fix(map): panel menu overlap drawer

--- a/components/pagecomponents/home/panel/panel.module.css
+++ b/components/pagecomponents/home/panel/panel.module.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: start;
-  z-index: 9999;
+  z-index: 99;
   gap: 8px;
 }
 
